@@ -392,6 +392,9 @@ New in v0.8.00 (2016/07/??)
 * Merged in lp:~mcuelenaere/duplicity/duplicity
   - Make sure we don't load files completely into memory when transferring them from/to
     the remote WebDAV endpoint.
+* Fixed bug #1798206 and bug #1798504
+  * Made paramiko a global with import during __init__ so it would
+    not be loaded unless needed.
 
 
 New in v0.7.08 (2016/07/02)
